[Modify] GitHub Actions를 이용한 build 시 .nojekyll 파일이 생성 되는지 확인하기 위한 yaml 코드 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Create .nojekyll file
         run: echo "" > docs/.nojekyll
 
+      - name: List directory for debugging
+        run: ls -al docs
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
